# OpenGL-RenderLutTextureVideo

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/zt/opengles_redenerer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RenderVideo.cpp  RenderVideo.h  coroutine.h  log.h  native_color.cpp  native_color.h  native_color_lib.cpp  native_color_lib.h
app/src/main/java/com/zt/opengles_redenerer/: CubeSurface.kt  LogUtil.kt  MainActivity.kt  NativeColorRenderer.kt  SimpleRenderer.kt  VideoFIle.kt  VideoHelper.kt
app/src/main/res/drawable/: bg_button.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zt/opengles_redenerer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
